navbar, fix family font and sizing, create vars in css,

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,68 +1,69 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.open-sans-light {
+	font-family: "Open Sans", serif;
+	font-optical-sizing: auto;
+	font-weight: 300;
+	font-style: normal;
+	font-variation-settings: "wdth" 100;
+}
+.open-sans {
+	font-family: "Open Sans", serif;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+	font-variation-settings: "wdth" 100;
+}
+.open-sans-bold {
+	font-family: "Open Sans", serif;
+	font-optical-sizing: auto;
+	font-weight: 700;
+	font-style: normal;
+	font-variation-settings: "wdth" 100;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
+html,
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+	font-size: 62.5%;
+	font-family: "Open Sans";
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+:root {
+	/* Variables */
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+	/* Font size */
+	--smallest: 1.2rem;
+	--details: 1.3rem;
+	/*up to 1.4 or 14px*/
+	--body-text: 1.6rem;
+	/*up to 1.8 or 18px*/
+	--subtitle: 1.8rem;
+	/*up to 2.0*/
+	--title: 2.4rem;
+	/*up to 2.8*/
+	--header: 3.2rem;
+	/*up to 3.8*/
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+	--font-sz-logo: 8rem;
+	--font-sz-sublogo: 3rem;
+	--font-sz-body-homepage: 1.8rem;
+
+	--font-sz-navbar: 2.1rem;
+
+	/* Colors */
+	--dark-gray: #474747;
+	--gray: #dbdbdb;
+	--light-gray: #eaedef;
+	--dark-blue: #003d64;
+	--secundary-dark-blue: #003d64e6;
+	--terciary-dark-blue: #003d64b3;
+	--light-blue: #003e6433;
+	--dark-green: #476242;
+	--light-green: #47624266;
+	--purple: #8c6abb;
+	--light-purple: #8c6abb4d;
 }
