--- a/src/ui/components/Navbar.css
+++ b/src/ui/components/Navbar.css
@@ -3,7 +3,7 @@ header {
 	background: linear-gradient(
 		90deg,
 		rgba(219, 219, 219, 1) 6%,
-		var(--dark-blue) 30%
+		var(--dark-blue) 36%
 	);
 	display: flex;
 	flex-direction: row;
@@ -36,4 +36,9 @@ ul {
 
 li {
 	margin: 0 2rem;
+}
+
+a {
+	color: white;
+	text-decoration: none;
 }
