--- a/src/grapher/pages/HomePage.css
+++ b/src/grapher/pages/HomePage.css
@@ -1,3 +1,24 @@
 body {
     background-color:#EAEDEF;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1.5fr; /* Dos columnas del mismo tamaño */
+    gap: 0px; /* Espacio entre las columnas */
+}
+
+.column {
+    padding: 20px;
+}
+
+h1 {
+    margin: 8rem 3rem 0rem 3rem;
+    font-size: 10rem;
+    color:var(--dark-blue);
+}
+
+h3 {
+    margin: 8rem 3rem 0rem 3rem;
+    font-size: 7rem;
+}
