--- a/src/grapher/pages/HomePage.css
+++ b/src/grapher/pages/HomePage.css
@@ -13,12 +13,12 @@ body {
 }
 
 h1 {
-    margin: 8rem 3rem 0rem 3rem;
+    margin: 5rem 3rem 0rem 3rem;
     font-size: 10rem;
     color:var(--dark-blue);
 }
 
-h3 {
-    margin: 8rem 3rem 0rem 3rem;
-    font-size: 7rem;
+p {
+    margin: 0.5rem 3rem 0rem 3rem;
+    font-size: 2.5rem;
 }
