--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -1,6 +1,6 @@
 .container {
     background-color:#EAEDEF;
-    height: calc(100vh-12rem);
+    height: calc(100vh - 12rem - 3.8rem);
     display: grid;
     grid-template-columns: 1fr 2.4fr; 
     gap: 0px;
@@ -69,6 +69,8 @@
 }
 
 .footer {
+    padding: 0;
+    margin: 0;
     background-color: var(--gray);
     display: grid;
     grid-template-columns: 2.5fr 1fr; /* Dos columnas del mismo tamaño */
@@ -79,4 +81,9 @@
     justify-content: left;
     margin: 1rem 6rem;
     font-size: var(--details);
+}
+
+.footerImage {
+    height: 1.3rem;
+    width: 1.3rem;
 }
