--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -2,6 +2,8 @@
     background-color:#EAEDEF;
     height: calc(100vh - 12rem - 2.8rem);
     display: grid;
+    place-items: center;
+    justify-content: center;
     grid-template-columns: 1fr 2.4fr; 
     gap: 0px;
     margin: 0;
