--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -5,7 +5,7 @@
     place-items: center;
     justify-content: center;
     grid-template-columns: 1fr 2.4fr; 
-    gap: 0px;
+    gap: 0;
     margin: 0;
     padding: 0;
 }
