--- a/src/ui/components/Footer.module.css
+++ b/src/ui/components/Footer.module.css
@@ -6,7 +6,7 @@
 
 .footer_container {
     display: grid;
-    grid-template-columns: 4.2fr 1fr; /* Dos columnas del mismo tamaño */
+    grid-template-columns: 4fr 1.2fr; /* Dos columnas del mismo tamaño */
     gap: 2fr; /* Espacio entre las columnas */
 }
 
@@ -36,4 +36,44 @@
     padding: 0;
     height: 1.3rem;
     width: 1.3rem;
+}
+
+/* ---- media querys ---- */
+
+@media screen and (max-width: 1024px) {
+	/* ocultamos el menu principal */
+    
+    .footer_container {
+        display: grid;
+        grid-template-rows: 4fr 1.2fr; /* Dos columnas del mismo tamaño */
+        gap: 2fr; /* Espacio entre las columnas */
+    }
+    
+    .footerColumnLeft {
+        justify-content: left;
+        margin: 0.5rem 0rem 0.5rem 2rem;
+        font-size: var(--details);
+    }
+    
+    .footerInfo {
+        padding: 0;
+        margin: 0;
+        background-color: var(--gray);
+        display: grid;
+        grid-template-columns: 3fr 1fr; /* Dos columnas del mismo tamaño */
+        gap: 0; /* Espacio entre las columnas */
+    }
+    
+    .footerColumnRight {
+        justify-content: end;
+        margin: 0.5rem 1rem;
+        font-size: var(--details);
+    }
+    
+    .footerImage {
+        margin: 0;
+        padding: 0;
+        height: 1.3rem;
+        width: 1.3rem;
+    }
 }
