--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,9 @@ body {
 
 	--font-sz-navbar: 2.1rem;
 
+	--font-logo-title: 7.2rem;
+	--font-logo-subtitle: 1.8rem;
+
 	/* Colors */
 	--dark-gray: #474747;
 	--gray: #dbdbdb;
