Finallizacion vista tablet

--- a/src/grapher/pages/HomePage.module.css
+++ b/src/grapher/pages/HomePage.module.css
@@ -31,13 +31,17 @@
 }
 
 .description {
+    width: 40rem;
     justify-self: start;
+    text-align: justify;
     margin: 0.5rem 3rem 0rem 3rem;
     font-size: var(--body-text);
 }
 
 .download {
     text-align: center;
+    font-weight: 600;
+    font-size: var(--body-text);
     margin: 4rem 3rem 0rem 3rem;
     padding: 1rem 12rem;
     background-color: var(--dark-blue);
@@ -69,4 +73,53 @@
     font-size: var(--subtitle);
     text-decoration: none;
     font-weight: 600;
+}
+
+@media screen and (max-width: 1024px) {
+	.container {
+        height: calc(100vh - 12rem - 2.7rem);
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr; 
+        text-align: center;
+    }
+
+    .column {
+        padding: 0rem;
+        margin: 1rem 0rem;
+        justify-items: center;
+    }
+
+    .name {
+        text-align: center;
+        justify-self: center;
+    }
+
+    .title {
+        text-align: center;
+        justify-self: center;
+        margin: -1.5rem 0rem 4rem 0rem;
+    }
+
+    .description {
+        width: 63rem;
+        margin: 1rem 0rem 1rem 0rem;
+        font-size: var(--body-text);
+    }
+
+    .download {
+        padding: 1rem 12rem;
+    }
+    
+
+    .video {
+        margin: 1rem 1rem;
+        height: 29rem;
+        width: 65rem;
+    }
+
+    .learn {
+        justify-self: center;
+        margin: 0.5rem 3rem 0rem 3rem;
+        font-size: var(--body-text);
+    }
 }
