--- a/src/grapher/pages/Acerca.module.css
+++ b/src/grapher/pages/Acerca.module.css
@@ -1,27 +1,21 @@
 .container {
-	/* todo: fix height */
-	height: calc(100vh - 12rem);
+	height: auto;
 	width: 100vw;
 	background-color: var(--light-gray);
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
-}
-.main_grid {
-	padding: 2rem 2rem;
-	display: grid;
-	grid-template-columns: 70.2rem 70.2rem;
-	grid-template-rows: 10.8rem repeat(3, 44rem);
-	background-color: var(--light-gray);
-	max-width: 144rem;
-	/* 1920px */
+	align-items: center;
+	overflow-y: auto;
 }
 
+/* todo: hacer un grid dentro del header, y despues otro grid para el contenido */
 .header {
-	grid-column: 1;
-	grid-row: 1;
 	display: flex;
 	justify-content: left;
 	align-items: center;
+	max-width: 144rem;
+	width: 144rem;
 
 	.title {
 		font-size: var(--font-logo-title);
@@ -37,17 +31,29 @@
 	}
 }
 
+.main_grid {
+	display: grid;
+	grid-template-columns: 70.2rem 70.2rem;
+	grid-template-rows: repeat(3, 44rem);
+	row-gap: 8rem;
+	background-color: var(--light-gray);
+	max-width: 144rem;
+}
+
 .img_app {
 	grid-column: 1;
-	grid-row: 2;
+	grid-row: 1;
 	width: 100%;
 	height: 44rem;
 	row-gap: 2rem;
 }
 
-.first_article {
+.first_article,
+.third_article {
 	grid-column: 2;
-	grid-row: 2;
+	grid-row: 1;
+	align-self: center;
+	padding-left: 8rem;
 	h2 {
 		font-size: var(--title);
 		color: var(--dark-blue);
@@ -63,12 +69,25 @@
 
 .second_article {
 	grid-column: 1;
-	grid-row: 3;
+	grid-row: 2;
+	align-self: center;
+	padding-right: 8rem;
+	h2 {
+		font-size: var(--title);
+		color: var(--dark-blue);
+		margin-bottom: 2rem;
+	}
+	p {
+		font-size: var(--subtitle);
+		color: var(--dark-gray);
+		text-align: justify;
+		margin-bottom: 3rem;
+	}
 }
 
 .img_grafica3d {
 	grid-column: 2;
-	grid-row: 3;
+	grid-row: 2;
 	width: 100%;
 	height: 44rem;
 	border-radius: 24px;
@@ -79,7 +98,7 @@
 }
 .img_grafica2d {
 	grid-column: 1;
-	grid-row: 4;
+	grid-row: 3;
 	width: 100%;
 	height: 44rem;
 	border-radius: 24px;
@@ -89,28 +108,20 @@
 	-o-border-radius: 24px;
 }
 
-/* ------izquierda--------- */
-.section_left {
-	display: flex;
-	flex-direction: column;
-}
-.aside_left {
-	display: flex;
-	flex-direction: column;
-	align-items: end;
-	padding-right: 1rem;
-}
-
-/* ------derecha--------- */
-
-.aside_right {
-	display: flex;
-	flex-direction: column;
-	padding-left: 1rem;
-}
-
-.second_img {
-	grid-area: right;
-	width: 100%;
-	height: 44rem;
+.third_article {
+	grid-column: 2;
+	grid-row: 3;
+	align-self: center;
+	padding-left: 8rem;
+	h2 {
+		font-size: var(--title);
+		color: var(--dark-blue);
+		margin-bottom: 2rem;
+	}
+	p {
+		font-size: var(--subtitle);
+		color: var(--dark-gray);
+		text-align: justify;
+		margin-bottom: 3rem;
+	}
 }
