--- a/src/grapher/pages/Acerca.module.css
+++ b/src/grapher/pages/Acerca.module.css
@@ -1,6 +1,7 @@
 .container {
 	height: auto;
 	width: 100vw;
+	min-height: 100vh;
 	background-color: var(--light-gray);
 	display: flex;
 	flex-direction: column;
@@ -9,13 +10,13 @@
 	overflow-y: auto;
 }
 
-/* todo: hacer un grid dentro del header, y despues otro grid para el contenido */
 .header {
+	margin-top: 6rem;
 	display: flex;
 	justify-content: left;
 	align-items: center;
 	max-width: 144rem;
-	width: 144rem;
+	width: 100%;
 
 	.title {
 		font-size: var(--font-logo-title);
@@ -25,37 +26,48 @@
 	}
 
 	.subtitle {
-		font-size: var(--font-logo-subtitle);
+		font-size: 1.6rem;
 		height: 6rem;
-		color: var(--dark-blue);
+		color: var(--black);
+		font-weight: 400;
 	}
 }
 
 .main_grid {
 	display: grid;
-	grid-template-columns: 70.2rem 70.2rem;
+	grid-template-columns: repeat(2, minmax(70.2rem));
 	grid-template-rows: repeat(3, 44rem);
 	row-gap: 8rem;
+	column-gap: 8rem;
 	background-color: var(--light-gray);
 	max-width: 144rem;
+	margin-bottom: 12rem;
 }
 
 .img_app {
 	grid-column: 1;
 	grid-row: 1;
+	border-radius: 22px;
 	width: 100%;
 	height: 44rem;
-	row-gap: 2rem;
+	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
+	-webkit-border-radius: 22px;
+	-moz-border-radius: 22px;
+	-ms-border-radius: 22px;
+	-o-border-radius: 22px;
+}
+
+.first_article {
+	grid-column: 2;
+	grid-row: 1;
 }
 
 .first_article,
+.second_article,
 .third_article {
-	grid-column: 2;
-	grid-row: 1;
 	align-self: center;
-	padding-left: 8rem;
 	h2 {
-		font-size: var(--title);
+		font-size: var(--header);
 		color: var(--dark-blue);
 		margin-bottom: 2rem;
 	}
@@ -70,25 +82,13 @@
 .second_article {
 	grid-column: 1;
 	grid-row: 2;
-	align-self: center;
-	padding-right: 8rem;
-	h2 {
-		font-size: var(--title);
-		color: var(--dark-blue);
-		margin-bottom: 2rem;
-	}
-	p {
-		font-size: var(--subtitle);
-		color: var(--dark-gray);
-		text-align: justify;
-		margin-bottom: 3rem;
-	}
 }
 
 .img_grafica3d {
 	grid-column: 2;
 	grid-row: 2;
 	width: 100%;
+	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
 	height: 44rem;
 	border-radius: 24px;
 	-webkit-border-radius: 24px;
@@ -101,6 +101,7 @@
 	grid-row: 3;
 	width: 100%;
 	height: 44rem;
+	box-shadow: 0px 8px 19px 0px rgba(0, 0, 0, 0.75);
 	border-radius: 24px;
 	-webkit-border-radius: 24px;
 	-moz-border-radius: 24px;
@@ -111,17 +112,120 @@
 .third_article {
 	grid-column: 2;
 	grid-row: 3;
-	align-self: center;
-	padding-left: 8rem;
-	h2 {
-		font-size: var(--title);
-		color: var(--dark-blue);
+}
+@media screen and (max-width: 1500px) {
+	.main_grid {
+		grid-template-columns: repeat(2, 46rem);
+		grid-template-rows: repeat(2, 44rem) 30rem;
+		column-gap: 4rem;
+		row-gap: 4rem;
+	}
+	.img_app {
+		align-self: center;
+		height: 35rem;
+	}
+	.img_grafica3d {
+		align-self: center;
+		height: 35rem;
+	}
+	.img_grafica2d {
+		align-self: center;
+		height: 30rem;
+	}
+}
+
+@media screen and (max-width: 1024px) {
+	.header {
+		margin: 2rem 0 4rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.main_grid {
+		grid-template-columns: repeat(2, 34rem);
+		grid-template-rows: repeat(2, 44rem) 26rem;
+		column-gap: 4rem;
+		row-gap: 4rem;
+	}
+	.img_app {
+		align-self: center;
+		height: 30rem;
+	}
+	.img_grafica3d {
+		align-self: center;
+		height: 25rem;
+	}
+	.img_grafica2d {
+		align-self: center;
+		height: 25rem;
+	}
+}
+@media screen and (max-width: 768px) {
+	.main_grid {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		background-color: var(--light-gray);
+		max-width: 76.8rem;
+		padding: 0 2rem;
+		margin-bottom: 12rem;
+		gap: 0;
+	}
+	.img_app {
+		order: 1;
+		height: 40rem;
+	}
+	.first_article {
+		order: 2;
+	}
+	.img_grafica3d {
+		order: 3;
+		width: 100%;
+		height: 40rem;
+	}
+	.second_article {
+		order: 4;
+	}
+	.img_grafica2d {
+		order: 5;
+		height: 40rem;
+	}
+	.third_article {
+		order: 6;
+	}
+	.img_app,
+	.img_grafica3d,
+	.img_grafica2d {
 		margin-bottom: 2rem;
 	}
-	p {
-		font-size: var(--subtitle);
-		color: var(--dark-gray);
-		text-align: justify;
-		margin-bottom: 3rem;
+	.first_article,
+	.second_article,
+	.third_article {
+		margin-bottom: 6rem;
+	}
+}
+
+@media screen and (max-width: 575px) {
+	.img_app,
+	.img_grafica3d,
+	.img_grafica2d {
+		height: 30rem;
+		min-width: 30rem;
+	}
+	.header {
+		min-width: 30rem;
+		margin: 2rem 0;
+
+		.title {
+			font-size: 6rem;
+			margin-right: 2rem;
+			height: 8rem;
+		}
+
+		.subtitle {
+			font-size: 1.5rem;
+			height: 3rem;
+		}
 	}
 }
