--- a/src/ui/components/Navbar.module.css
+++ b/src/ui/components/Navbar.module.css
@@ -12,7 +12,10 @@
 	padding: 0 2rem;
 	color: white;
 	min-width: 102.4rem;
-	min-height: 12rem;
+	min-height: 10rem;
+	box-shadow: 0px 6px 19px 0px rgba(0, 0, 0, 0.75);
+	position: relative;
+	z-index: 1000;
 }
 
 .menu_container {
